--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ requires-python = ">=3.11"
 authors = [
     { name = "Matimu Chauke", email = "matimu@chauke.org" },
 ]
-dependencies = []
+dependencies = [
+    "docker==7.1.0",
+    "pydantic==2.10.3",
+    "appdirs==1.4.4"
+]
 
 [project.optional-dependencies]
 full = []
